now you can fetch public notes
