# docs/swagger.json
@@ -138,9 +138,41 @@
                     "notes"
                 ],
                 "summary": "Fetch all notes",
+                "parameters": [
+                    {
+                        "type": "boolean",
+                        "default": false,
+                        "description": "Fetch all public notes",
+                        "name": "public",
+                        "in": "query"
+                    },
+                    {
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 50,
+                        "minimum": 1,
+                        "type": "integer",
+                        "default": 50,
+                        "description": "Notes per page",
+                        "name": "per_page",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/notes.UserNotesResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/notes.UserNotesResponse"
                         }
@@ -489,6 +521,9 @@
                     "items": {
                         "$ref": "#/definitions/note.Note"
                     }
+                },
+                "pages": {
+                    "type": "integer"
                 }
             }
         },
